Added a simple calculator UI

--- a/index.html
+++ b/index.html
@@ -9,25 +9,28 @@
     <script src="foo.js"></script>
 </head>
 <body>
-    <div>
-        <number-buttons>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
+    <div id="container">
+        <display>
+            Dummy text
+        </display>
+        <buttons class="btn">
+            <button>C</button>
+            <button>÷</button>
+            <button>×</button>
+            <button>-</button>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>0</button>
-        </number-buttons>
-        <operator-buttons>
             <button>+</button>
-            <button>-</button>
-            <button>×</button>
-            <button>÷</button>
-        </operator-buttons>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>=</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>0</button>
+        </buttons>   
     </div>
 </body>
 </html>
