added classes to the buttons containing numbers

--- a/index.html
+++ b/index.html
@@ -6,30 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <script src="foo.js"></script>
+    <script src="foo.js" defer></script>
 </head>
 <body>
     <div id="container">
-        <display>
-            Dummy text
-        </display>
+        <display id="display"></display>
         <buttons class="btn">
             <button>C</button>
             <button>÷</button>
             <button>×</button>
             <button>-</button>
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
             <button>+</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
             <button>=</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>0</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button class="number">0</button>
         </buttons>   
     </div>
 </body>
