--- a/index.html
+++ b/index.html
@@ -12,22 +12,24 @@
     <div id="container">
         <display id="display"></display>
         <buttons class="btn">
-            <button>C</button>
-            <button>÷</button>
-            <button>×</button>
-            <button>-</button>
+            <button id="clear">C</button>
+            <button class="operator">*</button>
+            <button class="operator">/</button>
+            <button class="operator">-</button>
             <button class="number">7</button>
             <button class="number">8</button>
             <button class="number">9</button>
-            <button>+</button>
+            <button class="operator">+</button>
             <button class="number">4</button>
             <button class="number">5</button>
             <button class="number">6</button>
-            <button>=</button>
+            <button id="equals">=</button>
             <button class="number">1</button>
             <button class="number">2</button>
             <button class="number">3</button>
             <button class="number">0</button>
+            <button id="decimalpoint">.</button>
+            <button id="delete">DEL</button>
         </buttons>   
     </div>
 </body>
